--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-snap": "^1.23.0",
     "react-yandex-metrika": "^2.6.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
@@ -35,7 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "ssr": "node server/index.js"
+    "ssr": "node server/index.js",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
@@ -58,7 +60,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "react-snap": "^1.23.0",
     "tailwindcss": "^3.0.24"
   }
 }
